improving the documentation
